--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
+    "ios":"react-native run-ios",
     "test": "jest",
     "lint": "eslint ."
   },
